--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple discord bot that deletes messages that don't have an image attached.",
   "main": "index.js",
   "scripts": {
+    "serve": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/SeppahBaws/Discord-ImageOnly#readme",
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "js-beautify": "^1.8.6"
   }
 }
